# package defines metadata for the current crate
[package]
name = "radarbase"
version = "0.0.0"
license = "MIT"
edition = "2021"
authors = ["Angold Wang <awang@weids.dev>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Libraries directly used in the project.
[dependencies]
memmap2 = "0.3.0"


# Libraries that are only used for development
[dev-dependencies]
rand = "0.8"
lmdb-zero = "0.4.4"
lmdb-rkv = "0.14.0"
tempfile = "3.2.0"
sled = "0.34.6"


[[bench]]
name = "benchmark"
harness = false


[[bench]]
name = "syscall_benchmark"
harness = false
